clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: surveyformclusterip
  namespace: default
spec:
  selector:
    app: surveyformapi
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  type: ClusterIP
